objects/SLC_ClientExpense__c.object
<CustomObject>
    <fields>
        <fullName>SLC_ClientAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of Client the Client Expense is attributed to.</description>
        <label>Client</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.IsPersonAccount</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Expenses (Client)</relationshipLabel>
        <relationshipName>Expense_Attributions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLC_ClientName__c</fullName>
        <description>Name and surname of STANLIB client benefitting from expenditure incurred by STANLIB Employee. (Reference to Person Account)</description>
        <formula>SLC_ClientAccount__r.FirstName &amp;&quot; &quot;&amp;  SLC_ClientAccount__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLC_DateOfExpense__c</fullName>
        <description>Date on which expense was incurred.</description>
        <label>Date of Expense</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLC_EntityName__c</fullName>
        <description>Name of entity associated with client that receives benefit of expenditure incurred by STANLIB Employee.</description>
        <formula>SLC_ClientAccount__r.AW_ParentAccount__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLC_ExpenseName__c</fullName>
        <description>Captures a memorable description of the Expense as the Expense Name.</description>
        <formula>SLC_Expense__r.SLC_ExpenseName__c</formula>
        <label>Expense Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLC_ExpenseSplit__c</fullName>
        <description>Captures expense split amount</description>
        <label>Expense Split</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SLC_Expense__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Master Expense record</description>
        <label>Expense</label>
        <referenceTo>SLC_Expense__c</referenceTo>
        <relationshipLabel>Client Expenses</relationshipLabel>
        <relationshipName>Client_Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLC_FspEntityNumber__c</fullName>
        <description>FSP registration number of entity associated with client benefitting from expenditure incurred by STANLIB Employee.</description>
        <formula>SLC_ClientAccount__r.AW_ParentAccount__r.SLI_RegistrationFSPNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FSP Entity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLC_IsClientExpenseOwnerLoggedInUser__c</fullName>
        <description>Checks if the Client Expense belongs to the logged in user for &apos;My Client Expenses&apos; List View</description>
        <formula>SLC_StanlibEmployee__c == $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Client Expense Owner logged in User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLC_NatureOfExpense__c</fullName>
        <description>Description of what the expenditure incurred by STANLIB Employee entailed, eg. &apos;Client lunch&apos;</description>
        <label>Nature of Expense</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SLC_NatureOfExpense</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLC_StanlibEmployee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>STANLIB Employee who was responsible for incurring expense on client.</description>
        <label>STANLIB Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Client_Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLC_YTDClientExpensesRollup__c</fullName>
        <description>Gets value of expense allowance for the client from their Account record.</description>
        <formula>SLC_ClientAccount__r.SLC_YtdClientExpensesRollupDlrs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD Client Expenses Rollup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SLC_YTDExpenseStatus__c</fullName>
        <description>Visual indication of the total expenditure incurred against the STANLIB client for the year. 
Red status= total expenditure exceeds annual limit of R1000
Yellow status= total expenditure is nearing R1000  annual limit (over R900)
Green status= total expenditure is under R900</description>
        <formula>IF(SLC_YTDClientExpensesRollup__c &gt;= 1000,
IMAGE(&quot;/img/samples/color_red.gif&quot;,&quot;red&quot;, 16, 100),
IF(SLC_YTDClientExpensesRollup__c &gt;= 900,
IMAGE(&quot;/img/samples/color_yellow.gif&quot;,&quot;yellow&quot;, 16, 100),
IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 16, 100)
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD Expense Status</label>
        <type>Text</type>
    </fields>
    <label>Client Expense</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SLC_Expense__c</columns>
        <columns>SLC_ClientName__c</columns>
        <columns>SLC_StanlibEmployee__c</columns>
        <columns>SLC_NatureOfExpense__c</columns>
        <columns>SLC_ExpenseSplit__c</columns>
        <columns>SLC_DateOfExpense__c</columns>
        <columns>SLC_YTDExpenseStatus__c</columns>
        <columns>SLC_YTDClientExpensesRollup__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>SLC_MyClientExpenses</fullName>
        <columns>NAME</columns>
        <columns>SLC_ExpenseName__c</columns>
        <columns>SLC_ClientName__c</columns>
        <columns>SLC_DateOfExpense__c</columns>
        <columns>SLC_FspEntityNumber__c</columns>
        <columns>SLC_EntityName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SLC_IsClientExpenseOwnerLoggedInUser__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Client Expenses</label>
    </listViews>
    <nameField>
        <displayFormat>CEXP-{000000}</displayFormat>
        <label>Client Expense Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Expenses</pluralLabel>
    <recordTypes>
        <fullName>SLC_ClientExpense</fullName>
        <active>true</active>
        <description>Stanlib Client Expense</description>
        <label>Client Expense</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>